# local-rag-query

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  run_chain.py
backend/: llm_backend.py
embed/: embedder.py  vec_store.py
ingest/: chunker.py  loader.py
rag/: prompt_build.py  retriever.py
rag_chain/: embed_runnable.py  llm_runnable.py  prompt_runnable.py  vec_runnable.py
